fix: Buttons would default to amber when active in dark mode

--- a/ui/src/scss/theme-dark.scss
+++ b/ui/src/scss/theme-dark.scss
@@ -1,7 +1,5 @@
-
 @mixin make-dark-theme($name, $darkModePrimary, $accentNavBar) {
-
-  .config-ui-x-#{$name} {
+  .config-ui-x-dark-#{if($accentNavBar, 'accent-', '')}#{$name} {
     $backgroundColor: #000000;
     $secondaryBackground: #2b2b2b;
     $secondaryText: #9e9e9e;
@@ -35,14 +33,7 @@
 
     .btn-primary,
     .btn-default {
-      @extend .btn-amber !optional;
-      background-color: $darkModePrimary !important;
-    }
-
-    .btn-primary:active,
-    .btn-default:active {
-      @extend .btn-amber:active !optional;
-      background-color: rgba($darkModePrimary, .8) !important;
+      @extend .btn-#{$name} !optional;
     }
 
     .bg-yellow {
@@ -280,35 +271,66 @@
   }
 }
 
-@include make-dark-theme("dark-default", #ffa000, false);
-@include make-dark-theme("dark-accent-default", #ffa000, true);
-@include make-dark-theme("dark-red", #f44336, false);
-@include make-dark-theme("dark-accent-red", #f44336, true);
-@include make-dark-theme("dark-pink", #e91e63, false);
-@include make-dark-theme("dark-accent-pink", #e91e63, true);
-@include make-dark-theme("dark-purple", #9c27b0, false);
-@include make-dark-theme("dark-accent-purple", #9c27b0, true);
-@include make-dark-theme("dark-indigo", #3f51b5, false);
-@include make-dark-theme("dark-accent-indigo", #3f51b5, true);
-@include make-dark-theme("dark-blue", #2196f3, false);
-@include make-dark-theme("dark-accent-blue", #2196f3, true);
-@include make-dark-theme("dark-blue-grey", #607d8b, false);
-@include make-dark-theme("dark-accent-blue-grey", #607d8b, true);
-@include make-dark-theme("dark-navi-blue", #000099, false);
-@include make-dark-theme("dark-accent-navi-blue", #000099, true);
-@include make-dark-theme("dark-green", #4caf50, false);
-@include make-dark-theme("dark-accent-green", #4caf50, true);
-@include make-dark-theme("dark-orange", #ff9800, false);
-@include make-dark-theme("dark-accent-orange", #ff9800, true);
-@include make-dark-theme("dark-grey", #9e9e9e, false);
-@include make-dark-theme("dark-accent-grey", #9e9e9e, true);
-@include make-dark-theme("dark-brown", #795548, false);
-@include make-dark-theme("dark-accent-brown", #795548, true);
-@include make-dark-theme("dark-amber", #ffc107, false);
-@include make-dark-theme("dark-accent-amber", #ffc107, true);
-@include make-dark-theme("dark-teal", #009688, false);
-@include make-dark-theme("dark-accent-teal", #009688, true);
-@include make-dark-theme("dark-cyan", #00bcd4, false);
-@include make-dark-theme("dark-accent-cyan", #00bcd4, true);
-@include make-dark-theme("dark-deep-purple", #673ab7, false);
-@include make-dark-theme("dark-accent-deep-purple", #673ab7, true);
+@function str-split($string, $separator) {
+  $i: str-index($string, $separator);
+  @if $i != null {
+    @return append(
+        str-slice($string, 1, $i - 1),
+        str-split(str-slice($string, $i + str-length($separator)), $separator)
+    );
+  }
+  @return $string
+}
+
+@include make-dark-theme("default", #ffa000, false);
+@include make-dark-theme("default", #ffa000, true);
+@include make-dark-theme("red", #f44336, false);
+@include make-dark-theme("red", #f44336, true);
+@include make-dark-theme("pink", #e91e63, false);
+@include make-dark-theme("pink", #e91e63, true);
+@include make-dark-theme("purple", #9c27b0, false);
+@include make-dark-theme("purple", #9c27b0, true);
+@include make-dark-theme("indigo", #3f51b5, false);
+@include make-dark-theme("indigo", #3f51b5, true);
+@include make-dark-theme("blue", #2196f3, false);
+@include make-dark-theme("blue", #2196f3, true);
+@include make-dark-theme("blue-grey", #607d8b, false);
+@include make-dark-theme("blue-grey", #607d8b, true);
+@include make-dark-theme("navi-blue", #4c4c7c, false);
+@include make-dark-theme("navi-blue", #4c4c7c, true);
+@include make-dark-theme("green", #4caf50, false);
+@include make-dark-theme("green", #4caf50, true);
+@include make-dark-theme("orange", #ff9800, false);
+@include make-dark-theme("orange", #ff9800, true);
+@include make-dark-theme("grey", #9e9e9e, false);
+@include make-dark-theme("grey", #9e9e9e, true);
+@include make-dark-theme("brown", #795548, false);
+@include make-dark-theme("brown", #795548, true);
+@include make-dark-theme("amber", #ffc107, false);
+@include make-dark-theme("amber", #ffc107, true);
+@include make-dark-theme("teal", #009688, false);
+@include make-dark-theme("teal", #009688, true);
+@include make-dark-theme("cyan", #00bcd4, false);
+@include make-dark-theme("cyan", #00bcd4, true);
+@include make-dark-theme("deep-purple", #673ab7, false);
+@include make-dark-theme("deep-purple", #673ab7, true);
+
+.config-ui-x-dark-navi-blue,.config-ui-x-dark-accent-navi-blue {
+  .btn-primary {
+    background-color: #000099 !important;
+  }
+
+  .badge-primary {
+    background-color: #000070 !important;
+  }
+  .widget-control-button {
+    &.primary-text {
+      color: #2196f3;
+    }
+  }
+
+  .hb-widget-chart-background {
+    background-color: rgba(#000070, 0.2);
+    display: none;
+  }
+}
